--- a/Main/CMakeLists.txt
+++ b/Main/CMakeLists.txt
@@ -12,16 +12,16 @@ add_library(${TARGET_NAME} ${HEADERS} ${SOURCES})
 # add_dependencies()
 
 #precompile header
-target_precompile_headers()
+
 
 #keep structure
 source_group(TREE "${CMAKE_SOURCE_DIR}" FILES ${HEADERS} ${SOURCES})
 
 #link
-target_link_libraries()
+# target_link_libraries()
 
-target_include_directories()
+# target_include_directories()
 
-target_compile_definations()
+# target_compile_definations()
 
 
