--- a/EngineCore/CMakeLists.txt
+++ b/EngineCore/CMakeLists.txt
@@ -1,29 +1,26 @@
 #set project name
-
+set(TARGET_NAME EngineCore)
 
 # adding files
 file(GLOB_RECURSE HEADERS "*.h")
 file(GLOB_RECURSE SOURCES "*.cpp")
 
 #add exe/lib
-add_library()
+add_library(${TARGET_NAME} ${HEADERS} ${SOURCES})
 
 #deps
-add_dependencies()
+# add_dependencies()
 
 #precompile header
-add_precomiled_headers()
 
 #keep structure
 source_group(TREE "${CMAKE_SOURCE_DIR}" FILES ${HEADERS} ${SOURCES})
 
 #link
-target_link_libraries()
+# target_link_libraries()
 
-target_include_directories()
+# target_include_directories()
 
-target_compile_definations()
-
-target_compile_features()
+# target_compile_definations()
 
 
