--- a/Run/CMakeLists.txt
+++ b/Run/CMakeLists.txt
@@ -1,5 +1,5 @@
 #set project name
-set(TARGET_NAME Core)
+set(TARGET_NAME Run)
 
 # adding files
 file(GLOB_RECURSE HEADERS "*.h")
@@ -9,19 +9,18 @@ file(GLOB_RECURSE SOURCES "*.cpp")
 add_library(${TARGET_NAME} ${HEADERS} ${SOURCES})
 
 #deps
-# add_dependencies()
+add_dependencies(${TARGET_NAME} Main)
 
 #precompile header
-target_precompile_headers()
 
 #keep structure
 source_group(TREE "${CMAKE_SOURCE_DIR}" FILES ${HEADERS} ${SOURCES})
 
 #link
-target_link_libraries()
+# target_link_libraries()
 
-target_include_directories()
+# target_include_directories()
 
-target_compile_definations()
+# target_compile_definations()
 
 
