--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,15 @@
 [submodule "3rd/dxc"]
 	path = 3rd/dxc
 	url = https://github.com/microsoft/DirectXShaderCompiler.git
+[submodule "3rd/glm"]
+	path = 3rd/glm
+	url = https://github.com/g-truc/glm.git
 [submodule "3rd/glfw"]
 	path = 3rd/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "3rd/entt"]
+	path = 3rd/entt
+	url = https://github.com/skypjack/entt.git
 [submodule "3rd/concurrentqueue"]
 	path = 3rd/concurrentqueue
 	url = https://github.com/cameron314/concurrentqueue.git
