--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -9,7 +9,7 @@ file(GLOB_RECURSE SOURCES "*.cpp")
 add_library(${TARGET_NAME} ${HEADERS} ${SOURCES})
 
 #deps
-# add_dependencies(${TARGET_NAME} )
+add_dependencies(${TARGET_NAME} EngineCore)
 
 #precompile header
 
@@ -17,9 +17,9 @@ add_library(${TARGET_NAME} ${HEADERS} ${SOURCES})
 source_group(TREE "${CMAKE_SOURCE_DIR}" FILES ${HEADERS} ${SOURCES})
 
 #link
-# target_link_libraries()
+target_link_libraries(${TARGET_NAME} PUBLIC EngineCore)
 
-# target_include_directories()
+target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # target_compile_definations()
 
